adding spec for creds

--- a/deploy/crds/aws.account.hub.appvia.io_awscredentials_crd.yaml
+++ b/deploy/crds/aws.account.hub.appvia.io_awscredentials_crd.yaml
@@ -34,6 +34,28 @@ spec:
         status:
           description: AWSCredentialStatus defines the observed state of AWSCredential
           type: object
+        spec:
+          description: AWSCredentialsSpec defines the desired state of AWSCredentials
+          properties:
+            id:
+              description: AWS Access Key ID
+              type: string
+            secret:
+              description: AWS Secret Access Key
+              type: string
+          required:
+          - id
+          - secret
+          type: object
+        status:
+          description: AWSCredentialsStatus defines the observed state of AWSCredentials
+          properties:
+            status:
+              description: Status provides a overall status
+              type: string
+          required:
+          - status
+          type: object
       type: object
   version: v1alpha1
   versions:
