--- a/deploy/crds/aws.account.hub.appvia.io_awstokens_crd.yaml
+++ b/deploy/crds/aws.account.hub.appvia.io_awstokens_crd.yaml
@@ -30,7 +30,24 @@ spec:
           type: object
         spec:
           description: AWSTokenSpec defines the desired state of AWSToken
-          type: object
+          properties:
+            id:
+              description: AWS Access Key ID
+              type: string
+            secret:
+              description: AWS Secret Access Key
+              type: string
+            token:
+              description: AWS Session Token
+              type: string
+            expiration:
+              description: Expiration date time
+              type: string
+          required:
+          - id
+          - secret
+          - token
+          - expiration
         status:
           description: AWSTokenStatus defines the observed state of AWSToken
           type: object
