WIP helper functions and specs

--- a/deploy/crds/aws.account.hub.appvia.io_awscredentials_crd.yaml
+++ b/deploy/crds/aws.account.hub.appvia.io_awscredentials_crd.yaml
@@ -43,9 +43,13 @@ spec:
             secret:
               description: AWS Secret Access Key
               type: string
+            accountId:
+              description: AWS Account ID
+              type: string
           required:
           - id
           - secret
+          - accountId
           type: object
         status:
           description: AWSCredentialsStatus defines the observed state of AWSCredentials
