--- a/deploy/crds/aws.account.hub.appvia.io_eksclusters_crd.yaml
+++ b/deploy/crds/aws.account.hub.appvia.io_eksclusters_crd.yaml
@@ -30,7 +30,53 @@ spec:
           type: object
         spec:
           description: EKSClusterSpec defines the desired state of EKSCluster
-          type: object
+          properties:
+            name:
+              type: string
+            resourcesvpcconfig:
+              type: object
+              properties:
+                securitygroupids:
+                  description: A list of security group IDs
+                  type: array
+                  items: 
+                    type: string
+                subnetids:
+                  description: A list of subnet IDs
+                  type: array
+                  items: 
+                    type: string
+              required:
+              - subnetids
+            rolearn:
+              type: string
+            version:
+              type: string
+            use:
+              description: Use is a reference to an AWSCredentials object to use
+              properties:
+                group:
+                  description: Group is the api group
+                  type: string
+                kind:
+                  description: Kind is the name of the resource under the group
+                  type: string
+                name:
+                  description: Name is name of the resource
+                  type: string
+                namespace:
+                  description: Namespace is the location of the object
+                  type: string
+                version:
+                  description: Version is the group version
+                  type: string
+              required:
+              - group
+              - kind
+              - name
+              - namespace
+              - version
+              type: object
         status:
           description: EKSClusterStatus defines the observed state of EKSCluster
           type: object
