nodegroup controller and crd

--- a/deploy/crds/aws.account.hub.appvia.io_eksnodegroups_crd.yaml
+++ b/deploy/crds/aws.account.hub.appvia.io_eksnodegroups_crd.yaml
@@ -98,6 +98,7 @@ spec:
             - subnets
             - noderole
             - region
+            - use
         status:
           description: EKSNodeGroupStatus defines the observed state of EKSNodeGroup
           type: object
