making name required for node group, adding handle of not found exception

--- a/deploy/crds/aws.compute.hub.appvia.io_eksnodegroups_crd.yaml
+++ b/deploy/crds/aws.compute.hub.appvia.io_eksnodegroups_crd.yaml
@@ -94,6 +94,7 @@ spec:
                 - version
               type: object
           required:
+            - nodegroupname
             - clustername
             - subnets
             - noderole
