--- a/deploy/crds/aws.compute.hub.appvia.io_awscredentials_crd.yaml
+++ b/deploy/crds/aws.compute.hub.appvia.io_awscredentials_crd.yaml
@@ -30,35 +30,33 @@ spec:
           type: object
         spec:
           description: AWSCredentialSpec defines the desired state of AWSCredential
-          type: object
-        status:
-          description: AWSCredentialStatus defines the observed state of AWSCredential
-          type: object
-        spec:
-          description: AWSCredentialsSpec defines the desired state of AWSCredentials
           properties:
+            accountId:
+              description: Account is the AWS account these credentials reside within
+              type: string
             id:
               description: AWS Access Key ID
               type: string
             secret:
               description: AWS Secret Access Key
               type: string
-            accountId:
-              description: AWS Account ID
-              type: string
           required:
+          - accountId
           - id
           - secret
-          - accountId
           type: object
         status:
-          description: AWSCredentialsStatus defines the observed state of AWSCredentials
+          description: AWSCredentialStatus defines the observed state of AWSCredential
           properties:
             status:
               description: Status provides a overall status
               type: string
+            verified:
+              description: Verified checks that the credentials are ok and valid
+              type: boolean
           required:
           - status
+          - verified
           type: object
       type: object
   version: v1alpha1
