--- a/deploy/crds/aws.compute.hub.appvia.io_eksnodegroups_crd.yaml
+++ b/deploy/crds/aws.compute.hub.appvia.io_eksnodegroups_crd.yaml
@@ -35,43 +35,60 @@ spec:
               type: string
             clustername:
               type: string
+            desiredsize:
+              format: int64
+              type: integer
             disksize:
+              format: int64
+              type: integer
+            ec2sshkey:
+              description: The security groups that are allowed SSH access (port 22)
+                to the worker nodes
               type: string
             instancetypes:
-              type: array
-              items: 
-                type: string
-            nodegroupname:
-                items: string
-            releaseversion:
-                items: string
-            subnets:
-              type: array
-              items: 
-                type: string
-            securitygroupids:
-              description: A list of security group IDs
-              type: array
-              items: 
-                type: string
-            subnets:
-              description: The subnets to use for the Auto Scaling group that is created for your node group
-              type: array
               items:
                 type: string
+              type: array
+            labels:
+              additionalProperties:
+                type: string
+              type: object
+            maxsize:
+              format: int64
+              type: integer
+            minsize:
+              format: int64
+              type: integer
+            nodegroupname:
+              type: string
             noderole:
-              description: The IAM role associated with your node group.
               type: string
             region:
+              description: AWS region to launch node group within, must match the
+                region of the cluster
               type: string
-            version:
+            releaseversion:
               type: string
+            remoteaccess:
+              type: string
+            sourcesecuritygroups:
+              description: The Amazon EC2 SSH key that provides access for SSH communication
+                with the worker nodes in the managed node group https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ec2-key-pairs.html
+              items:
+                type: string
+              type: array
+            subnets:
+              items:
+                type: string
+              type: array
             tags:
-              type: object
-            labels:
+              additionalProperties:
+                type: string
+              description: The metadata to apply to the node group
               type: object
             use:
-              description: Use is a reference to an AWSCredentials object to use
+              description: Use is a reference to an AWSCredentials object to use for
+                authentication
               properties:
                 group:
                   description: Group is the api group
@@ -89,21 +106,31 @@ spec:
                   description: Version is the group version
                   type: string
               required:
-                - group
-                - kind
-                - name
-                - namespace
-                - version
+              - group
+              - kind
+              - name
+              - namespace
+              - version
               type: object
+            version:
+              description: The Kubernetes version to use for your managed nodes
+              type: string
           required:
-            - nodegroupname
-            - clustername
-            - subnets
-            - noderole
-            - region
-            - use
+          - clustername
+          - nodegroupname
+          - noderole
+          - region
+          - subnets
+          - use
+          type: object
         status:
           description: EKSNodeGroupStatus defines the observed state of EKSNodeGroup
+          properties:
+            status:
+              description: Status provides a overall status
+              type: string
+          required:
+          - status
           type: object
       type: object
   version: v1alpha1
